Actualización de cliente a partir del id y datos parciales otras  mejoras de diseño