@@ -6,6 +6,7 @@ import com.sbarrasa.bank.model.customer.CustomerEntity;
 import com.sbarrasa.bank.repository.CustomerRepository;
 import com.sbarrasa.bank.service.exceptions.CustomerException;
 import com.sbarrasa.util.validator.Validator;
+import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Example;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,24 +20,34 @@ public class CustomerService {
 
   private final CustomerRepository customerRepository;
   private final Validator validator;
+  private final ModelMapper mapper;
+
 
   public CustomerService(CustomerRepository customerRepository) {
     this.customerRepository = customerRepository;
+    this.mapper = createModelMapper();
     this.validator = new Validator();
   }
 
-  public List<Customer> getAllCustomers() {
-      return customerRepository.findAll().stream()
-        .map(CustomerDTO::new)
-        .collect(Collectors.toList());
+  private ModelMapper createModelMapper() {
+    var mapper = new ModelMapper();
+    mapper.getConfiguration().setSkipNullEnabled(true);
+    return mapper;
   }
 
 
   @Transactional
-  public Customer create(CustomerEntity customer) {
-    if( customerRepository.existsById(customer.getId()))
-      throw new CustomerException(new CustomerDTO(customer), CustomerException.DUPLICATED);
+  public Customer create(CustomerDTO customer) {
+    if(customerRepository.existsById(customer.getId()))
+      throw new CustomerException(customer, CustomerException.DUPLICATED);
 
+    var customerEntity = mapper.map(customer, CustomerEntity.class);
+
+    return save(customerEntity);
+  }
+
+  @Transactional
+  public Customer save(CustomerEntity customer) {
     validator.validate(customer);
 
     return customerRepository.save(customer);
@@ -44,13 +55,15 @@ public class CustomerService {
   }
 
   @Transactional
-  public Customer update(CustomerEntity customer) {
-    if(getCustomer(customer.getId())==null)
-      throw new CustomerException(new CustomerDTO(customer), CustomerException.NOT_FOUND);
+  public Customer update(Integer customerId, Customer customer) {
+    var customerEntity = getCustomer(customerId);
+    
+    if(customerEntity==null)
+      throw new CustomerException(customer, CustomerException.NOT_FOUND);
+    
+    mapper.map(customer, customerEntity);
+    return save(customerEntity);
 
-    validator.validate(customer);
-
-    return customerRepository.save(customer);
   }
 
   @Transactional
@@ -60,21 +73,28 @@ public class CustomerService {
       throw new CustomerException(new CustomerDTO().setId(id), CustomerException.NOT_FOUND);
 
     // se devolverá una copia del customer borrado con el lastUpdate de la eliminación
-    var customerDeleted = new CustomerEntity(customer)
-                                              .setLastUpdate(LocalDateTime.now());
+    var customerDeleted = mapper.map(customer, CustomerDTO.class);
+    customerDeleted.setLastUpdate(LocalDateTime.now());
 
     customerRepository.deleteById(id);
     return customerDeleted;
   }
 
-  public List<Customer> filter(CustomerEntity customerExample) {
-    Example<CustomerEntity> example = Example.of(customerExample);
-
-    return customerRepository.findAll(example).stream()
-      .map(customer -> (Customer)new CustomerDTO(customer))
-      .toList();
+  public List<Customer> getAllCustomers() {
+    return customerRepository.findAll().stream()
+      .map(customer -> mapper.map(customer, CustomerDTO.class))
+      .collect(Collectors.toList());
   }
 
+
+  public List<Customer> filter(Customer customerExample) {
+    Example<CustomerEntity> example = Example.of(
+      mapper.map(customerExample, CustomerEntity.class));
+
+    return customerRepository.findAll(example).stream()
+      .map(customer -> mapper.map(customer, CustomerDTO.class))
+      .collect(Collectors.toList());
+  }
 
   public CustomerEntity getCustomer(Integer id) {
     return customerRepository.findById(id).orElseThrow(
